--- a/app/views/estimates/calc.html.erb
+++ b/app/views/estimates/calc.html.erb
@@ -1,16 +1,19 @@
 <h1>計算結果</h1>
 <p>年収が<%= @kekka%>万円のとき年144,000支払った場合</p>
-<% num = @kekka %>
-<% if num <= 4000 %>
-     <%= puts "79,200円減税されます" %>
-      <% elsif num >= 1800 %>
-        <%= puts"61,920円減税されます" %>
-      <% elsif num >= 900 %>
-        <%= puts "47,500円減税されます" %>
-      <% elsif num >= 695 %>
-        <%= puts"43,200円減税されます" %>
-      <% elsif num >= 330 %>
-        <%= puts "28,800円減税されます" %>
-      <% else %>
-        <% puts "21,600円減税されます" %>
+<% num = @kekka%>
+<% if num >= 4000 %>
+     <%= p "79,200円減税されます" %>
+      <% elsif num <= 1800 %>
+        <%= p "61,920円減税されます" %>
+      <% elsif num <= 900 %>
+        <%= p "47,500円減税されます" %>
+      <% elsif num <= 695 %>
+        <%= p "43,200円減税されます" %>
+      <% elsif num <= 330 %>
+        <%= p "28,800円減税されます" %>
+      <% elsif num <= 195 %>
+        <%= p "21,600円減税されます" %>
+        <% else %>
+        <%= p "0円減税されます"%>
     <% end %>
+
